--- a/contato.html
+++ b/contato.html
@@ -7,10 +7,13 @@
   <title>Contato | Bikcraft</title>
   <meta name="description" content="Termos e condições">
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@500&display=swap" rel="stylesheet">
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="contato">
@@ -39,7 +42,7 @@
 
     <div class="contato container">
       <section class="contato-dados" aria-label="Endereço">
-        <h2 class="font-1-m -cor-0">Loja Online</h2>
+        <h2 class="font-1-m cor-0">Loja Online</h2>
         <div class="contato-endereco font-2-s cor-4">
           <p>Rua Ali Perto, 35</p>
           <p>Rio de Janeiro - RJ</p>
@@ -161,6 +164,7 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
