--- a/orcamento.html
+++ b/orcamento.html
@@ -7,10 +7,13 @@
   <title>Orçamento | Bikcraft</title>
   <meta name="description" content="Termos e condições">
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@500&display=swap" rel="stylesheet">
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="orcamento">
@@ -37,7 +40,7 @@
       </div>
     </div>
 
-    <form class="orcamento container" action="./">
+    <form class="orcamento container" action="./orcamento.html">
       <div class="orcamento-produto">
         <h2 class="font-1-xs cor-5">Bikcraft ou Seguro?</h2>
 
@@ -52,14 +55,40 @@
 
           <input type="radio" name="produto" value="nimbus" id="nimbus">
           <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li><img src="./img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt=""> 50 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt=""> Rastreador</li>
+            </ul>
+            <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+          </div>
 
           <input type="radio" name="produto" value="magic" id="magic">
           <label for="magic">Magic Might <span>R$ 2499</span></label>
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li><img src="./img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt=""> 45 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt=""> Rastreador</li>
+            </ul>
+            <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta">
+          </div>
 
           <input type="radio" name="produto" value="nebula" id="nebula">
           <label for="nebula">Nebula Cosmic <span>R$ 3999</span></label>
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li><img src="./img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt=""> 40 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt=""> Rastreador</li>
+            </ul>
+            <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta branca">
+          </div>
         </div>
-
         <div class="orcamento-conteudo" id="orcamento-seguro">
           <h2 class="font-1-xs cor-5">Escolha o plano</h2>
 
@@ -155,6 +184,7 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
